# ai_call_agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
agent/: __init__.py  graph.py
agent/nodes/: __init__.py  classifier.py  escalation.py  faq.py  order_status.py  scheduler.py
agent/tools/: __init__.py  appointment_tool.py  order_tool.py
core/: __init__.py  config.py  latency.py  state.py
mock_api/: __init__.py  appointments.py  orders.py
rag/: __init__.py  ingestor.py  retriever.py
rag/data/: faqs.md
telephony/: __init__.py  audio_utils.py  twilio_handler.py
tests/: __init__.py  conftest.py  test_api.py  test_graph.py  test_rag.py  test_tools.py
tests/fixtures/: sample_faqs.md
